frontend/src/css/Card.css
html { margin:0; padding:0; }

.card-iframe {
    font-size: 36px;
    display: block;
    margin: 0 auto;
    width: 100%;
    height: 100%;
}

iframe {
    background-color: #e5e5e5ff;
    border-width: 0;
    height: 500px;
    border-radius: 10px;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

@media (max-width: 1024px) {
    .card-iframe {
        font-size: 32px;
    }
    
    iframe {
        height: 450px;
        max-width: 450px;
    }
}

